added dbCU